			SWI-Prolog ChangeLog
			====================

  * FIXED: Bug in call/1 on ground-calls and very specific control.

  * FIXED: Incorrect verification in SECURE-mode in pl-bags.c (debugging
    only).

  * FIXED: Bug in handling logical-update view of assert/retract.  Thanks
    to Paolo Moura.

VERSION 3.3.0 (release-6)
=========================

  * FIXED: Problem in the debugger, leading to a possible crash on the exit
    port (very complicated conditions).

  * ISO: Added the Prolog flags unknown and debug.  Moved unknown/2, debug
    and nodebug predicates to new library(edinburgh).

  * ISO: Added current_predicate/1

  * ISO: clause/2 errors.

  * FIXED: clause/2: clauses for which the body executes in a different
    module as the head to tag the body with the body-context module.

  * ISO: Added exceptions to =../2 and functor/3.  In old SWI-Prolog,
    these predicates failed silently on all errors.

  * ADDED: ISO char_conversion/2 and friends.  They are not really enforced
    though.

  * ADDED: ISO option variables(-Vars) to read_term/[2,3]

  * FIXED: number_chars/2 exception on illegal number-syntax.

  * FIXED: handling ! in call/1, \+/1 and condition-part of if-then-else

  * FIXED: time/1 library predicate to pass exceptions correctly.

  * ISO: renamed misnamed close2/2 to close/2.

  * ISO: Renamed flush/0 to flush_output/0.  Added backward compatibility
    flush/0 to library(backcomp).

  * ISO: Enforced number for arg1 in number_chars/2 and number_codes/2.
    Succeed on number_codes(15, "0xf") and similar cases (i.e. if both
    arguments are instantiated, convert the string and match the number
    as there are multiple representations of numbers.

  * ISO: raising permission-error when reading from an output stream
    or writing to an input stream.

  * FIXED: Put `iso' feature back in place (was lost in rewrite of
    prolog-flag handling.

  * ISO: fixed exceptions thrown on atomic non-evaluable term (i.e.
    A is foo).
